objects/AWS_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Physician_Update_Access_Key__c</fullName>
        <label>Physician Update Access Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Update_SQS_Base_URL__c</fullName>
        <label>Physician Update SQS Base URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Update_SQS_Queue__c</fullName>
        <label>Physician Update SQS Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Update_Secret_Key__c</fullName>
        <label>Physician Update Secret Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AWS Credentials</label>
</CustomObject>